@@ -3,9 +3,17 @@
 <td><%= scanner[0] %></td>
 <td><%= parameters %></td>
 <td><%= targets %></td>
-<td><%= noFindings %></td>
-<td><%= lastScan[0] %></td>
+<td><%= findCount %></td>
+<td>
+	<% if(lastScan == null ) { %>
+		&nbsp;
+	<% } else { %>
+		<%= lastScan[0] %>
+	<% } %>
+</td>
 <td>
 	<a href='javascript://' class="edit">Edit</a>
+<!--
 	<a href='javascript://' class="destroy">Delete</a>
+-->
 </td>
